@@ -22,4 +22,4 @@ DATABASES = {
 
 django_version = django.get_version()
 if StrictVersion(django_version) < StrictVersion('1.7'):
-    INSTALLED_APPS.append('south', )
+    INSTALLED_APPS.append('south', )  # NOQA
