@@ -74,4 +74,4 @@ SECRET_KEY = 'foobar'
 CURRENCY_SERVICE = 'yahoo'
 
 # Freckle
-ACCOUNT_KEEPING_FRECKLE_ACCESS_TOKEN = 'foo'
+ACCOUNT_KEEPING_FRECKLE_ACCESS_TOKEN = 'Foo'
